@@ -7,8 +7,10 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 ## Join us on Discord for active test builds and much more : [Click Here](https://discord.gg/6fHCRKnDc9)
 
 ## v2.10.3.7 Change Log
-- [change] moved release notes button from setup to the about box
 - [add] added Ernst Connectors and Tools link to the about box links
+- [change] moved release notes button from setup to the about box
+- [fix] variables that have name with _double now consider %precis=N%
+
 
 ## v2.10.3.6 Main New Features
 - database manager
